<resources>
    <string name="sample_event_description">
    </string>
    <string name="app_name">Jamming</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="usernamemail">Username/Email</string>
    <string name="password">Password</string>
    <string name="owner_greeting">שלום, בעל עסק</string>
    <string name="hello_owner">Hello \"Owner Name\"</string>
    <string name="add_event">+ Create Event</string>
    <string name="my_events">My Events</string>
    <string name="past_events">Past Events</string>
    <string name="jazz_open_mic_night">Jazz Open Mic Night</string>
    <string name="rock_band_thunder">Rock Band – Thunderstruck</string>
    <string name="cafe_jazz_downtown">📍 Cafe Jazz, Downtown</string>
    <string name="stadium_xxz">📍 Stadium XXZ</string>
    <string name="date_15_01">🕒 15.01.2026 • 20:00</string>
    <string name="date_20_01">🕒 20.01.2026 • 21:00</string>
    <string name="jazz_blues">🎵 Jazz, Blues</string>
    <string name="rock_metal">🎵 Rock, Metal</string>
    <string name="spots_50_50">👥 50/50 spots</string>
    <string name="spots_12_100">👥 12/100 spots</string>
    <string name="edit_details">Edit Details</string>
    <string name="edit_view_details">Edit / View Details</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="add_event_description">Add new event</string>
    <string name="edit_event_details">Edit event details</string>
    <string name="Hello_User_title">Hello "User Name"</string>
    <string name="explore_location">Your location</string>
    <string name="filter_near_me">Near Me</string>
    <string name="filter_date_time">Date/Time</string>
    <string name="filter_favorites">Favorites</string>
    <string name="event_jazz_open_mic">Jazz Open Mic Night</string>
    <string name="event_rock_night">Rock Night</string>
    <string name="event_location_cafe_blue">Cafe Blue Note • 7 PM</string>
    <string name="event_location_cavern_blues">The Cavern • Blues</string>
    <string name="map_placeholder">Map Placeholder</string>
    <string name="locationTag">📍</string>
    <string name="boardTag">📅</string>
    <string name="starTag">⭐</string>
    <string name="events_near_me">Events Near Me</string>
    <string name="jazz_open_mic">Jazz Open Mic</string>
    <string name="cafe_blue_note_7_pm">Cafe Blue Note – 7 PM</string>
    <string name="jazz">Jazz</string>
    <string name="rock_night">Rock Night</string>
    <string name="the_cavern_blues">The Cavern – Blues</string>
    <string name="rock">Rock</string>
    <string name="open_jam_session">Open Jam Session</string>
    <string name="downtown_pub_19_30">Downtown Pub – 19:30</string>
    <string name="mixed">Mixed</string>
    <string name="timeTag">⏰</string>
    <string name="musicTag">🎵</string>
    <string name="peopleTag">👥</string>
    <string name="create_new_event">Create New Event</string>
    <string name="business_dashboard">(Business Owner Dashboard)</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="max_capacity">Max Capacity</string>
    <string name="event_description">Event Description</string>
    <string name="publish_event">Publish Event</string>
    <string name="music_genre">Music genre</string>
    <string name="cafe_bloute_9_pm">Cafe Bloute - 9 PM</string>
    <string name="_123_main_st">📍 123 Main St</string>
    <string name="_15_01_2024_19_00">⏰ 15.01.2024, 19:00</string>
    <string name="capacity_15_20_spots">Capacity: 15/20 spots</string>
    <string name="register_for_event">Register for Event</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="profile_amp_preferences"><![CDATA[Profile & Preferences]]></string>
    <string name="my_registered_events">My Registered Events</string>
    <string name="logout">Logout</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="john_smith">John Smith</string>
    <string name="awesome_cafe">Awesome Cafe</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite_genres">Favorite Genres</string>
    <string name="_5_km">5 km</string>
    <string name="jazz_rock">Jazz, Rock</string>
    <string name="distance">Distance</string>
    <string name="_25_km">25 km</string>
    <string name="not_registered_create_an_account">Not registered? Create an account</string>
    <string name="profile">profile</string>
    <string name="notifications">notifications</string>
    <string name="my_events_subtitle">My Event</string>
    <string name="sample_event_title">sample_event_title</string>
    <string name="sample_event_location">sample_event_location</string>
    <string name="sample_event_date">sample_event_date</string>
    <string name="registered">registered</string>
    <string name="view_details">view details</string>
    <string name="cancel_registration">cancel registration</string>
    <string name="register">register</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="select_user_type">Select user type:</string>
    <string name="user">User</string>
    <string name="event_manager">Event Manager</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sample_notification_body_user">sample notification body user</string>
    <string name="sample_notification_title_user">sample notification title user</string>
    <string name="event_cancelled">Event Cancelled</string>
    <string name="the_event_jazz_open_mic_has_been_cancelled_by_the_event_owner">The event \'Jazz Open Mic\' has been cancelled by the event owner.</string>
    <string name="today_14_32">Today • 14:32</string>
    <string name="event_updated">Event Updated</string>
    <string name="the_event_rock_night_has_been_updated_the_new_start_time_is_20_30">The event \'Rock Night\' has been updated. The new start time is 20:30.</string>
    <string name="yesterday_21_10">Yesterday • 21:10</string>
    <string name="_05_01_2025_16_57">05/01/2025 • 16:57</string>
    <string name="you_updated_details_for_acoustic_night_all_registered_users_were_notified">You updated details for \'Acoustic Night\'. All registered users were notified.</string>
    <string name="yesterday_10_22">Yesterday • 10:22</string>
    <string name="a_new_attendee_has_registered_for_your_event_indie_vibes">A new attendee has registered for your event \'Indie Vibes\'.</string>
    <string name="new_registration">New Registration</string>
    <string name="yesterday_18_45">Yesterday • 18:45</string>
    <string name="several_seats_have_opened_for_your_event_rock_night_following_cancellations">Several seats have opened for your event \'Rock Night\' following cancellations.</string>
    <string name="seats_available">Seats Available</string>
    <string name="today_13_10">Today • 13:10</string>
    <string name="your_event_jazz_open_mic_has_reached_full_capacity_sold_out">Your event \'Jazz Open Mic\' has reached full capacity (sold out).</string>
    <string name="event_sold_out">Event Sold Out</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_title">Event Title</string>
    <string name="a_live_jazz_night_with_local_musicians_open_stage">A live jazz night with local musicians. Open stage.</string>
    <string name="location">Location</string>
    <string name="blue_note_caf">Blue Note Café</string>
    <string name="date_dd_mm_yyyy">Date (DD/MM/YYYY)</string>
    <string name="_15_01_2025">15/01/2025</string>
    <string name="time_hh_mm">Time (HH:MM)</string>
    <string name="_19_30">19:30</string>
    <string name="capacity">Capacity</string>
    <string name="_50">50</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_event">Delete Event</string>
    <string name="menu">menu</string>
    <string name="owner_name">owner name</string>
    <string name="open_map">open map</string>
    <string-array name="music_genres">
        <item>Jazz</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>Blues</item>
        <item>Hip Hop</item>
        <item>Electronic</item>
        <item>Classical</item>
        <item>Open Mic</item>
    </string-array>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change">Change</string>
    <string name="action_clear">Clear</string>
    <string name="dialog_select_genres">Select genres</string>
    <string name="dialog_current_time_filter">Current time filter</string>
    <string name="dialog_current_date_filter">Current date filter</string>
    <string name="dialog_select_start_time">Select start time</string>
    <string name="dialog_select_end_time">Select end time</string>
    <string name="dialog_select_start_date">Select start date</string>
    <string name="dialog_select_end_date">Select end date</string>
    <string name="dialog_seat_filtering">Seat filtering</string>
    <string name="dialog_filter_by_distance">Filter by distance</string>
    <string name="error_no_location">No location is currently available. Make sure location permissions are enabled.</string>
    <string name="label_distance_km">Distance: %d km</string>
    <string name="empty_no_events">There are currently no events.</string>
    <string name="empty_no_matching_filters">No matching events found. Try changing your filters.</string>
    <string name="back_press_exit">Click again to exit.</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="event_details">Event Details</string>
    <string name="error_event_title">Please enter an event name</string>
    <string name="error_event_location">Please select a location</string>
    <string name="error_event_date">Please select a date</string>
    <string name="error_event_time">Please select a time</string>
    <string name="error_event_genre">Please select at least one genre</string>
    <string name="error_event_capacity">Invalid capacity value</string>
    <string name="error_event_description">Please enter an event description</string>
    <string name="error_missing_event_id">Missing event ID</string>
    <string name="error_edit_past_event">Past events cannot be edited</string>
    <string name="event_created_success">The event was created successfully!</string>
    <string name="select_music_genres">Select music genres</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_loading_event_he">Error loading event</string>
    <string name="error_missing_event_id_vm">Missing event ID</string>
    <string name="error_editing_not_allowed">Editing this event is no longer allowed.</string>
    <string name="error_event_time_already_passed">An event cannot be updated for a time that has already passed.</string>
    <string name="event_updated_success">The event was successfully updated.</string>
    <string name="error_updating_event_he">Error updating event</string>
    <string name="error_username_taken">Username is taken. Try another one.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_password_too_short">The password must be at least six characters long.</string>
    <string name="error_passwords_do_not_match">The passwords do not match.</string>
    <string name="error_event_time_already_passed_create">Cannot create an event for a time that has already passed.</string>
    <string name="error_user_generic">User error</string>
    <string name="error_creating_event">Failed to create event. Please try again.</string>
</resources>