<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#F2F4F7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <!-- שדה: שם אירוע -->
            <EditText
                android:id="@+id/eventNameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/event_name"
                android:padding="12dp"
                android:textSize="16sp"
                android:layout_marginBottom="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/eventLocationInput"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:autofillHints="postalAddress"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/location"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:focusableInTouchMode="true"
                    android:paddingEnd="8dp"
                    android:paddingBottom="6dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:longClickable="false"
                    android:cursorVisible="false"
                    android:inputType="none"/>

                <ImageButton
                    android:id="@+id/mapButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/open_map"
                    android:background="@android:color/transparent"
                    android:src="@drawable/outline_map_24"/>

            </LinearLayout>
            <!-- הפס שמתחת למיקום -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9E9E9E"
                android:layout_marginTop="-8dp"
                android:layout_marginBottom="10dp"/>


            <!-- שדה: תאריך -->
            <EditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/date"
                android:padding="12dp"
                android:focusableInTouchMode="true"
                android:focusable="false"
                android:clickable="true"
                android:longClickable="false"
                android:cursorVisible="false"
                android:inputType="none"
                tools:ignore="KeyboardInaccessibleWidget,TextFields" />

            <!-- שדה: שעה -->
            <EditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/time"
                android:padding="12dp"
                android:focusableInTouchMode="true"
                android:focusable="false"
                android:clickable="true"
                android:longClickable="false"
                android:cursorVisible="false"
                android:inputType="none"

                tools:ignore="KeyboardInaccessibleWidget" />

            <!-- בחירת ז'אנר -->
            <TextView
                android:id="@+id/genreSpinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:hint="@string/music_genre"
                android:textColor="#555555"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9E9E9E"
                android:layout_marginTop="-8dp"
                android:layout_marginBottom="10dp"/>

            <!-- שדה: קהל מקסימלי -->
            <EditText
                android:id="@+id/eventCapacityInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/max_capacity"
                android:inputType="number"
                android:padding="12dp" />

            <EditText
                android:id="@+id/eventDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:gravity="top"
                android:hint="@string/event_description"
                android:inputType="textMultiLine"
                android:padding="12dp" />

            <!-- כפתור ביטול -->
            <Button
                android:id="@+id/publishEventBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/publish_event"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textColor="#0B375E"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>
