<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/registerForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/usName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="user name"
            android:inputType="textPersonName"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        <TextView
            android:id="@+id/tvChooseRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_user_type"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/userTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/rbUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rbOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_manager" />

        </RadioGroup>

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/registerTitle"
            app:layout_constraintBottom_toTopOf="@id/registerForm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="register"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,VisualLintButtonSize" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="#7f0532"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:maxLines="4"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/btnAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textSize="14sp"
            android:textColor="#1E63E9"
            android:background="@android:color/transparent"
            android:padding="4dp"
            android:layout_marginTop="16dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
